// Produced by Acceleo Cpp Generator 1.1.0-R7S1-20151214


package dataControllerUtils.protobuf;

message DataFilter {
extensions 4 to 107;
    required string lhs = 1;
    
      enum FILTER_OPERATOR {
        OP_EQ = 0;
        OP_NE = 1;
        OP_LT = 2;
        OP_LE = 3;
        OP_GT = 4;
        OP_GE = 5;
        OP_CONTAINS = 6;
        OP_ICONTAINS = 7;
      }
      
    required FILTER_OPERATOR comp = 2;
    required string rhs = 3;
}