package dataControllerUtils.protobuf;

//The parameter full identity 

message DcServerMessage {
extensions 15 to 107;

  // Id of the client message that triggered the Server message.
  enum DcServerMessageType {
    UNKNOWN = 0;
    NEW_DATA_MESSAGE = 1;
    DC_RESPONSE = 2;
    DOMAIN_RESPONSE = 3;
  }
  
  required DcServerMessageType messageType = 2;
  required bytes payload = 3;
}
